# quick-start-connectors

adbs_oracle/: docker-compose.yml  pyproject.toml  test_langchain.py
adbs_oracle/dev/: abc.csv  load_data.py
adbs_oracle/provider/: __init__.py  app.py  provider.py
