[tool.poetry]
name = "adbs-oracle"
version = "0.1.0"
description = ""
authors = ["amoghparab1805 <amogh.nandkumar.parab@oracle.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.5"
connexion = { extras = ["swagger-ui"], version = "^2.14.2" }
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
black = "^23.11.0"
oracledb = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
